force-app/main/default/objects/Project__c/fields/Approved_Budget_hrs__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget_hrs__c</fullName>
    <inlineHelpText>Approved budget (in hours)</inlineHelpText>
    <label>Approved Budget (hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>