force-app/main/default/objects/Project__c/fields/Available_PO_Budget__c.field-meta.xml
<CustomField>
    <fullName>Available_PO_Budget__c</fullName>
    <inlineHelpText>The total available (approved and up to the current phase) purchase orders on the project</inlineHelpText>
    <label>Available PO Budget</label>
    <summarizedField>Purchase_Order__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Purchase_Order__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Purchase_Order__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>