force-app/main/default/objects/Project__c/fields/Billable_Hours_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Last_Week__c</fullName>
    <label>Billable Hours Last Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>