force-app/main/default/objects/Project__c/fields/Budget_Remaining_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Budget_Remaining_Percentage__c</fullName>
    <formula>(Total_PO_Budget__c  - Total_Actual_Billable__c) / Total_PO_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Remaining Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>