force-app/main/default/objects/Project__c/fields/Closed_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Count__c</fullName>
    <label>Closed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>