force-app/main/default/objects/Project__c/fields/Closed_RAID_Items__c.field-meta.xml
<CustomField>
    <fullName>Closed_RAID_Items__c</fullName>
    <label>Closed RAID Items</label>
    <summaryFilterItems>
        <field>RAID_Log__c.Status__c</field>
        <operation>equals</operation>
        <value>Closed, Archived</value>
    </summaryFilterItems>
    <summaryForeignKey>RAID_Log__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>