force-app/main/default/objects/Project__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0ea854</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>55c022</fullName>
                <label>Yellow-Green</label>
            </value>
            <value>
                <fullName>faf300</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>faa001</fullName>
                <label>Yellow-Orange</label>
            </value>
            <value>
                <fullName>fa7900</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>fa2430</fullName>
                <label>Red-Orange</label>
            </value>
            <value>
                <fullName>fa2207</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>b10f91</fullName>
                <label>Red-Purple</label>
            </value>
            <value>
                <fullName>5f2596</fullName>
                <label>Purple</label>
            </value>
            <value>
                <fullName>1d3c9e</fullName>
                <label>Blue-Purple</label>
            </value>
            <value>
                <fullName>2365b7</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>22afae</fullName>
                <label>Blue-Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>