force-app/main/default/objects/Project__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to contract/terms and conditions signature from client</description>
    <label>Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract.RecordType.Name</field>
            <operation>equals</operation>
            <value>T&amp;M Terms</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>