force-app/main/default/objects/Project__c/fields/Customer_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Flag__c</fullName>
    <formula>IMAGE( 
CASE( Customer_Sentiment__c, 
&quot;OnTrack&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Caution&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Impact&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Customer Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Flag</label>
    <type>Text</type>
</CustomField>