force-app/main/default/objects/Project__c/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <inlineHelpText>Is the customer happy with our project delivery?</inlineHelpText>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG</valueSetName>
    </valueSet>
</CustomField>