force-app/main/default/objects/Project__c/fields/Default_Feature__c.field-meta.xml
<CustomField>
    <fullName>Default_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Feature</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The default feature must belong to the same project</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Project_Feature__c.Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Feature__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>