force-app/main/default/objects/Project__c/fields/Default_Phase__c.field-meta.xml
<CustomField>
    <fullName>Default_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Phase</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Default phase must belong to project</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Phase__c.Project__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Phase__c</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>