force-app/main/default/objects/Project__c/fields/Default_Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Product Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Default product owner must be a user/contact of the account this project belongs to</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>User.Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>User.Username</field>
            <operation>contains</operation>
            <value>r3.digital</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_R3</relationshipName>
    <type>Lookup</type>
</CustomField>