force-app/main/default/objects/Project__c/fields/Design_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Design_Analysis__c</fullName>
    <defaultValue>0.2</defaultValue>
    <label>Design &amp; Analysis %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>