force-app/main/default/objects/Project__c/fields/Design_Analysis_Est__c.field-meta.xml
<CustomField>
    <fullName>Design_Analysis_Est__c</fullName>
    <description>Estimated hours required for design &amp; analysis</description>
    <formula>Total_Feature_Est__c * Design_Analysis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design &amp; Analysis Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>