force-app/main/default/objects/Project__c/fields/Disco_Date__c.field-meta.xml
<CustomField>
    <fullName>Disco_Date__c</fullName>
    <inlineHelpText>Date when the discoveries start</inlineHelpText>
    <label>Disco Date</label>
    <type>Date</type>
</CustomField>