force-app/main/default/objects/Project__c/fields/Discovery__c.field-meta.xml
<CustomField>
    <fullName>Discovery__c</fullName>
    <defaultValue>0.1</defaultValue>
    <description>The percentage of time to set aside for discovery.</description>
    <label>Discovery %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>