force-app/main/default/objects/Project__c/fields/Discovery_Est__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Est__c</fullName>
    <description>Estimated hours required for discovery</description>
    <formula>Total_Feature_Est__c * Discovery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discovery Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>