force-app/main/default/objects/Project__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Project__c/&quot;+Id+&quot;/view&quot;,  Account__r.Name + &quot; - &quot; + Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>