force-app/main/default/objects/Project__c/fields/G_Drive_Folder__c.field-meta.xml
<CustomField>
    <fullName>G_Drive_Folder__c</fullName>
    <description>Hyperlink to take user to relevant G-Drive</description>
    <label>G-Drive Folder</label>
    <type>Url</type>
</CustomField>