force-app/main/default/objects/Project__c/fields/GitHub_Repo__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Repo__c</fullName>
    <label>GitHub Repo</label>
    <type>Url</type>
</CustomField>