force-app/main/default/objects/Project__c/fields/Hide_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Hide_Acceptance_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the Acceptance Criteria section from the Project Proposal PDF</description>
    <label>Hide Acceptance Criteria</label>
    <type>Checkbox</type>
</CustomField>