force-app/main/default/objects/Project__c/fields/Hide_Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Hide_Assumptions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hide Assumptions</label>
    <type>Checkbox</type>
</CustomField>