force-app/main/default/objects/Project__c/fields/Hide_Business_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Hide_Business_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the Business Requirements section from the Project Proposal PDF</description>
    <label>Hide Business Requirements</label>
    <type>Checkbox</type>
</CustomField>