force-app/main/default/objects/Project__c/fields/Hide_from_Customer_Portal__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_Customer_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the project will no longer appear in the customer portal</inlineHelpText>
    <label>Hide from Customer Portal</label>
    <type>Checkbox</type>
</CustomField>