force-app/main/default/objects/Project__c/fields/Hide_Our_Approach__c.field-meta.xml
<CustomField>
    <fullName>Hide_Our_Approach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Our Approach</label>
    <type>Checkbox</type>
</CustomField>