force-app/main/default/objects/Project__c/fields/Hide_Personas__c.field-meta.xml
<CustomField>
    <fullName>Hide_Personas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the Personas section from the Project Proposal PDF</description>
    <label>Hide Personas</label>
    <type>Checkbox</type>
</CustomField>