force-app/main/default/objects/Project__c/fields/Hide_Project_Management_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Hide_Project_Management_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Project Management &amp; Delivery</label>
    <type>Checkbox</type>
</CustomField>