force-app/main/default/objects/Project__c/fields/Hide_RAID_Log__c.field-meta.xml
<CustomField>
    <fullName>Hide_RAID_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the RAID Log section from the Project Proposal PDF</description>
    <label>Hide RAID Log</label>
    <type>Checkbox</type>
</CustomField>