force-app/main/default/objects/Project__c/fields/Hide_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Hide_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Requirements</label>
    <type>Checkbox</type>
</CustomField>