force-app/main/default/objects/Project__c/fields/Hide_Services__c.field-meta.xml
<CustomField>
    <fullName>Hide_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Services</label>
    <type>Checkbox</type>
</CustomField>