force-app/main/default/objects/Project__c/fields/Hide_Table_of_Contents__c.field-meta.xml
<CustomField>
    <fullName>Hide_Table_of_Contents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Table of Contents</label>
    <type>Checkbox</type>
</CustomField>