force-app/main/default/objects/Project__c/fields/Hide_User_Stories__c.field-meta.xml
<CustomField>
    <fullName>Hide_User_Stories__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide the User Stories section from the Project Proposal PDF</description>
    <label>Hide User Stories</label>
    <type>Checkbox</type>
</CustomField>