force-app/main/default/objects/Project__c/fields/Hypercare__c.field-meta.xml
<CustomField>
    <fullName>Hypercare__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>Hypercare %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>