force-app/main/default/objects/Project__c/fields/Hypercare_Est__c.field-meta.xml
<CustomField>
    <fullName>Hypercare_Est__c</fullName>
    <description>Estimated hours required for hypercare</description>
    <formula>Total_Feature_Est__c * Hypercare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hypercare Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>