force-app/main/default/objects/Project__c/fields/IC__c.field-meta.xml
<CustomField>
    <fullName>IC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual Contributor: the person performing majority of the implementation</inlineHelpText>
    <label>IC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>