force-app/main/default/objects/Project__c/fields/In_Scope__c.field-meta.xml
<CustomField>
    <fullName>In_Scope__c</fullName>
    <label>In Scope</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>