force-app/main/default/objects/Project__c/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <label>Introduction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>