force-app/main/default/objects/Project__c/fields/Is_PreSales__c.field-meta.xml
<CustomField>
    <fullName>Is_PreSales__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;Backlog&apos;) 
|| ISPICKVAL(Status__c, &apos;Estimate&apos;) 
|| ISPICKVAL(Status__c, &apos;Planning&apos;) 
|| ISPICKVAL(Status__c, &apos;Kick off&apos;)
|| ISPICKVAL(Status__c, &apos;Discovery&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PreSales</label>
    <type>Checkbox</type>
</CustomField>