force-app/main/default/objects/Project__c/fields/KO_Date__c.field-meta.xml
<CustomField>
    <fullName>KO_Date__c</fullName>
    <label>KO Date</label>
    <type>Date</type>
</CustomField>