force-app/main/default/objects/Project__c/fields/Last_Stage_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Changed_Date__c</fullName>
    <label>Last Stage Changed Date</label>
    <type>Date</type>
</CustomField>