force-app/main/default/objects/Project__c/fields/Lead_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>