force-app/main/default/objects/Project__c/fields/Lead_Consultant_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant_is_Current_User__c</fullName>
    <formula>Lead_Consultant__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Consultant is Current User</label>
    <type>Checkbox</type>
</CustomField>