force-app/main/default/objects/Project__c/fields/Lighthouse_Account__c.field-meta.xml
<CustomField>
    <fullName>Lighthouse_Account__c</fullName>
    <formula>Account__r.Lighthouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lighthouse Account</label>
    <type>Checkbox</type>
</CustomField>