force-app/main/default/objects/Project__c/fields/Monthly_Committed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Committed_Hours__c</fullName>
    <inlineHelpText>Hours client committed to spent in their MSA agreement.</inlineHelpText>
    <label>Monthly Committed Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>