force-app/main/default/objects/Project__c/fields/Non_Billable_Hours_Reports__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Hours_Reports__c</fullName>
    <formula>HYPERLINK(
&apos;/lightning/r/Report/00OUE000001TzVl2AK/view&apos; &amp;
&apos;?fv0=&apos; &amp; Id &amp;
&apos;&amp;fv1=LAST_WEEK&amp;fv2=false&apos;,
&apos;Click Here&apos;,
&apos;_blank&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Billable Hours Reports</label>
    <type>Text</type>
</CustomField>