force-app/main/default/objects/Project__c/fields/Non_Billable_Time_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Time_Last_Week__c</fullName>
    <label>Non-Billable Time Last Week</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>