force-app/main/default/objects/Project__c/fields/Open_MoSCoW_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Open_MoSCoW_Proposal__c</fullName>
    <formula>HYPERLINK(&quot;/apex/MoscowProjectProposal?id=&quot; + Id, &quot;As PDF&quot;, &apos;_new&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open MoSCoW Proposal</label>
    <type>Text</type>
</CustomField>