force-app/main/default/objects/Project__c/fields/Open_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Open_Proposal__c</fullName>
    <formula>HYPERLINK(&quot;/apex/ProjectProposal?id=&quot; + Id, &quot;As PDF&quot;, &apos;_new&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Proposal</label>
    <type>Text</type>
</CustomField>