force-app/main/default/objects/Project__c/fields/Open_RAID_Items__c.field-meta.xml
<CustomField>
    <fullName>Open_RAID_Items__c</fullName>
    <formula>Open_Actions__c +  Open_Risks__c +  Open_Issues__c +  Open_Decisions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open RAID Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>