force-app/main/default/objects/Project__c/fields/Open_Risks__c.field-meta.xml
<CustomField>
    <fullName>Open_Risks__c</fullName>
    <label>Open Risks</label>
    <summaryFilterItems>
        <field>RAID_Log__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Risk</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>RAID_Log__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>RAID_Log__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>