force-app/main/default/objects/Project__c/fields/Outstanding_UAT_Items__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_UAT_Items__c</fullName>
    <description>A field to highlight the outstanding number of UAT Items on a project</description>
    <label>Outstanding UAT Items</label>
    <summaryFilterItems>
        <field>UAT_Feedback__c.Status_UAT_Feedback__c</field>
        <operation>equals</operation>
        <value>Open, WIP, Re-Test</value>
    </summaryFilterItems>
    <summaryForeignKey>UAT_Feedback__c.Project_UAT__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>