force-app/main/default/objects/Project__c/fields/Overall_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Status__c</fullName>
    <description>Collecting field for project status</description>
    <formula>TEXT(Budget__c)&amp;&apos; &apos;&amp;TEXT(Schedule__c)&amp;&apos; &apos;&amp;TEXT(Customer_Sentiment__c)&amp;&apos; &apos;&amp;TEXT(Scope__c)&amp;&apos; &apos;&amp;TEXT(Resource__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Status</label>
    <type>Text</type>
</CustomField>