force-app/main/default/objects/Project__c/fields/Playback_date__c.field-meta.xml
<CustomField>
    <fullName>Playback_date__c</fullName>
    <label>Playback date</label>
    <type>Date</type>
</CustomField>