force-app/main/default/objects/Project__c/fields/Project_Budget_Est_Time__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget_Est_Time__c</fullName>
    <label>Project Budget Est Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>