force-app/main/default/objects/Project__c/fields/Project_Flag__c.field-meta.xml
<CustomField>
    <fullName>Project_Flag__c</fullName>
    <formula>IMAGE( 
IF(CONTAINS(Overall_Status__c,&apos;Impact&apos;),&quot;/img/samples/flag_red.gif&quot;, 
IF(CONTAINS(Overall_Status__c,&apos;Caution&apos;),&quot;/img/samples/flag_yellow.gif&quot;,&quot;/img/samples/flag_green.gif&quot;)), 
&quot;Project Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Flag</label>
    <type>Text</type>
</CustomField>