force-app/main/default/objects/Project__c/fields/Project_Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Project_Is_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this to set new time entries as Non-Billable by default</description>
    <label>Project Is Billable</label>
    <type>Checkbox</type>
</CustomField>