force-app/main/default/objects/Project__c/fields/Project_Management__c.field-meta.xml
<CustomField>
    <fullName>Project_Management__c</fullName>
    <defaultValue>0.25</defaultValue>
    <label>Project Management %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>