force-app/main/default/objects/Project__c/fields/Project_Management_Est__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Est__c</fullName>
    <description>Estimated hours required for project management</description>
    <formula>Total_Feature_Est__c * Project_Management__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Management Est</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>