force-app/main/default/objects/Project__c/fields/Project_Report__c.field-meta.xml
<CustomField>
    <fullName>Project_Report__c</fullName>
    <label>Project Report</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>