force-app/main/default/objects/Project__c/fields/Project_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Report_Date__c</fullName>
    <label>Project Report Date</label>
    <type>Date</type>
</CustomField>