force-app/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>IF(CONTAINS(Overall_Status__c, &apos;Impact&apos;),&apos;Impact&apos;,IF(CONTAINS(Overall_Status__c, &apos;Caution&apos;),&apos;Caution&apos;,&apos;On Track&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Overall project health (determined by budget, schedule, customer sentiment, scope and resource fields)</inlineHelpText>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>