force-app/main/default/objects/Project__c/fields/Project_Status_Report__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Report__c</fullName>
    <formula>HYPERLINK(&quot;/apex/WeeklyStatusReport?id=&quot; + Id, &quot;As PDF&quot;, &apos;_new&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status Report</label>
    <type>Text</type>
</CustomField>