force-app/main/default/objects/Project__c/fields/Project_Update__c.field-meta.xml
<CustomField>
    <fullName>Project_Update__c</fullName>
    <inlineHelpText>Mandatory if any flags are not green, this needs to highlight reasons and corrective action.</inlineHelpText>
    <label>Project Status Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>