force-app/main/default/objects/Project__c/fields/Proposal_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Hourly_Rate__c</fullName>
    <defaultValue>137.5</defaultValue>
    <label>Proposal Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>