force-app/main/default/objects/Project__c/fields/R3_Signed__c.field-meta.xml
<CustomField>
    <fullName>R3_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>R3 Signed</label>
    <type>Checkbox</type>
</CustomField>