force-app/main/default/objects/Project__c/fields/R3_SPOC__c.field-meta.xml
<CustomField>
    <fullName>R3_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SPOC_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>