force-app/main/default/objects/Project__c/fields/Remaining_Available_PO_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Available_PO_Budget__c</fullName>
    <formula>Available_PO_Budget__c - Total_Actual_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total available purchase orders less the total billable work to date</inlineHelpText>
    <label>Remaining Available PO Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>